--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   secrets-manager:
-    LOGIN: SonarCredentials:sonartoken
+    LOGIN: SonarCredentialsOrder:sonartoken
     HOST: SonarCredentials:host
     Organization: SonarCredentials:organization
     Project: SonarCredentials:projectKey
