--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=OrderMS
 server.port=8200
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ordermanagement
+spring.datasource.url=jdbc:mysql://ordermanagement.cjpxtoembkdx.ap-south-1.rds.amazonaws.com/orderManagement
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 cart.uri=http://localhost:8000/cart
 productsOrdered.uri=http:localhost:8100/productsOrdered
