--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,7 @@ spring.datasource.url=jdbc:mysql://ordermanagement.cjpxtoembkdx.ap-south-1.rds.a
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
-cart.uri=http://localhost:8000/cart
-productsOrdered.uri=http:localhost:8100/productsOrdered
-buyer.uri=http://localhost:8000/buyer
-products.uri=http:localhost:8100/products
-SONAR_TOKEN=02cd3af5067566d712889e038d2a33a780cd8f0f
+cart.uri=http://13.233.143.131:8000/cart
+productsOrdered.uri=http://13.232.72.71:8100/productsOrdered
+buyer.uri=http://13.233.143.131:8000/buyer
+products.uri=http://13.232.72.71:8100/products
